[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kitetrader"
version = "2.1.0"
authors = [
  { name="Benny Thadikaran" },
]
description = "Unofficial Python Client for Zerodha Kite"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = ['algo-trading', 'stock-market', 'stock-data', 'historical-data', 'zerodha', 'intraday-data', 'kiteconnect', 'zerodha-kite']
dependencies = ["requests>=2.31.0", "mthrottle>=0.0.1"]

[project.urls]
"Homepage" = "https://github.com/BennyThadikaran/Kite-Trader"
"Bug Tracker" = "https://github.com/BennyThadikaran/Kite-Trader/issues"
